# street-engine

./: .gitignore  Cargo.toml  README.md
examples/: modelcase.rs
examples/modelcase/: factors.rs  graphics.rs  main.rs  map_provider.rs  random.rs
examples/modelcase/rules_provider/: mod.rs  railway.rs  road.rs
examples/particlemap/: bands.rs  disjoint_set.rs  factor.rs  flatness.rs  habitability.rs  main.rs  places.rs
examples/particlemap/data/: flatness-10459088313066128168.particlemap  flatness-11008264925851530191.particlemap  habitability-11008264925851530191.particlemap
examples/particlemap/places/: collection.rs  mod.rs  quarter.rs  region.rs  section.rs  usage.rs
src/: builder.rs  generator.rs  geom.rs  interface.rs  lib.rs  model.rs  traits.rs  unit.rs
src/container/: connection.rs  mod.rs  network.rs  undirected.rs
src/core/: mod.rs
src/core/container/: graph.rs  index_object.rs  mod.rs  network.rs  path_network.rs  undirected.rs
src/core/generator/: id_generator.rs
src/core/geometry/: angle.rs  line_segment.rs  mod.rs  rect.rs  site.rs
src/geometry/: angle.rs  line_segment.rs  mod.rs  rect.rs  site.rs
src/system/: mod.rs  node.rs  numeric.rs
src/system/growth/: growth_type.rs  growthtype.rs  mod.rs  relation_type.rs  stump.rs
src/system/node/: mod.rs  nodetype.rs
src/system/path/: factor.rs  mod.rs  numeric.rs
src/system/rule/: avoidance.rs  mod.rs  (+3 more)
src/transport/: builder.rs  candidate.rs  evaluation.rs  metrics.rs  mod.rs  node.rs  path_network_repository.rs  property.rs  repository.rs  rules.rs  traits.rs
tests/: terrain.rs
(+31 files in other folders)
