[package]
name = "citymodelgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rstar = "0.12.0"

[dev-dependencies]
fastlem = "0.1.4"
rand = "0.8.5"
noise = "0.8"
image = "0.24"
naturalneighbor = "1.2.1"
terrain-graph = "1.0.1"
tiny-skia = "0.11.4"
