[package]
name = "transport-engine"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "A Rust library for procedurally generating transport networks"
authors = ["Teruki TADA <me@peruki.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rstar = "0.12.0"

[dev-dependencies]
rayon = "1.10.0"
naturalneighbor = "1.2.2"
rand = "0.8.5"
noise = "0.9.0"
fastlem = "0.1.4"
terrain-graph = "1.0.1"
tiny-skia = "0.11.4"
